basic/deployments/todo-deployment-2.yaml
# This is a sample deployment for the todo-java application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment-2
  labels:
    app: todo-deployment-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-deployment-2
  template:
    metadata:
      labels:
        app: todo-deployment-2
    spec:
      containers:
        - name: todo
          image: quay.io/rh_rh/todo-java:latest
          imagePullPolicy: Always

          # Resource requests and limits can be set for a container.
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 768Mi

          # Ports can be exposed from a container.
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          # Environment variables can be set from a ConfigMap. 
          # Uncomment the following lines to use the ConfigMap created in todo-cm.yaml
          # env:
          #   - name: TZ
          #     valueFrom:
          #       configMapKeyRef:
          #         name: todo-java-configmap
          #         key: timezone
          #   - name: JAVA_OPTIONS
          #     valueFrom:
          #       configMapKeyRef:
          #         name: todo-java-configmap
          #         key: java_options
          #   - name: SPRING_ACTIVE_PROFILES
          #     valueFrom:
          #       configMapKeyRef:
          #         name: todo-java-configmap
          #         key: spring_active_profiles

          # Startup, liveness, and readiness probes can be configured for a container.
          startupProbe:
            httpGet:
              path: /management/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /management/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /management/health
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

        - name: ubi
          image: registry.access.redhat.com/ubi9/ubi:latest
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - tail -f /dev/null
